# git-closure

./: .gitignore  AGENTS.md  AGENTS_SPRINT.md  Cargo.toml  LICENSE  README.md  RELEASE.md  REVIEW.md  SPEC.md  SPRINT_REVIEW.md  flake.nix  pdf-style.tex
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexical_normalize.rs  fuzz_parse_snapshot.rs  fuzz_sanitized_relative_path.rs
src/: compile.rs  error.rs  git.rs  lib.rs  main.rs  materialize.rs  nar.rs  utils.rs
src/backends/: gcl.rs  mod.rs  nar.rs
src/gcl/: build.rs  diff.rs  export.rs  hash.rs  mod.rs  render.rs  serial.rs  summary.rs
src/ir/: identity.rs  mod.rs
src/providers/: command.rs  git_clone.rs  github_api.rs  local.rs  mod.rs  nix.rs
src/recipe/: mod.rs
src/snapshot/: build.rs  diff.rs  export.rs  hash.rs  mod.rs  render.rs  serial.rs  summary.rs
src/source/: mod.rs
tests/: cli.rs  compile_compat.rs  golden.rs  provider_compat.rs  recipe_compat.rs  rt13_spec_and_fixture.rs
tests/cli/: build-auto-output.stderr  build-auto-output.toml  build-explicit-output.toml  compile-basic-gcl.toml  completion-invalid-shell.toml  diff-different.stdout  diff-different.toml  diff-identical.toml  diff-live-source-stat.stdout  diff-live-source-stat.toml  diff-modechange-json.stdout  diff-modechange-json.toml  diff-modified-text.stdout  diff-modified-text.toml  diff-stat.stdout  diff-stat.toml  diff-symlink-target-stat.stdout  diff-symlink-target-stat.toml  diff-symlink-target-text.stdout  export-basic.toml  export-missing-output-flag.toml  fmt-check-canonical.toml  fmt-check-hash-mismatch.stderr  fmt-check-hash-mismatch.toml  fmt-check-noncanonical.stderr  fmt-check-noncanonical.toml  fmt-check-parse-error.stderr  fmt-check-parse-error.toml  fmt-repair-hash.toml  help-build.stdout  help-build.toml  help-compile.toml  help-diff.stdout  help-diff.toml  help-export.toml  help-render.stdout  help-render.toml  help-run.toml  help-targets.toml  list-long-malformed-sha.toml  (+21 more)
tests/cli/README/: README.md  readme-build-local.toml  readme-diff-stat.stdout  readme-diff-stat.toml  readme-verify.stdout  readme-verify.toml
tests/cli/build-auto-output.in/: repo.gcl
tests/cli/diff-identical.in/: same-a.gcl
tests/cli/diff-modechange-json.in/: right.gcl
tests/cli/diff-modified-text.in/: right.gcl
tests/cli/diff-stat.in/: single.gcl
tests/cli/diff-symlink-target-stat.in/: left.gcl  right.gcl
tests/cli/diff-symlink-target-text.in/: left.gcl  right.gcl
tests/cli/export-basic.in/: simple.gcl
tests/cli/fmt-check-canonical.in/: canonical.gcl
tests/fixtures/: simple.nar  simple.render.json
(+10 files in other folders)
