[package]
name = "git-closure"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ignore = "0.4"
lexpr = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.13"
thiserror = "2.0"

[dev-dependencies]
trycmd = "1.1"
