[package]
name = "git-closure-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
git-closure = { path = ".." }

[[bin]]
name = "fuzz_parse_snapshot"
path = "fuzz_targets/fuzz_parse_snapshot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sanitized_relative_path"
path = "fuzz_targets/fuzz_sanitized_relative_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lexical_normalize"
path = "fuzz_targets/fuzz_lexical_normalize.rs"
test = false
doc = false
bench = false
